# Basic-PhongLighting

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
PhongLighting/: CMakeLists.txt
PhongLighting/headers/: Camera.h  EBO.h  Mesh.h  Texture.h  VAO.h  VBO.h
PhongLighting/inc/: PhongLighting.h
PhongLighting/inc/glad/: glad.h
PhongLighting/resources/shaders/: default.frag
PhongLighting/src/: CMakeLists.txt  Camera.cpp  EBO.cpp  Mesh.cpp  Model.cpp  PhongLighting.cpp  Shader.cpp  Texture.cpp  VAO.cpp  VBO.cpp  glad.c  stb_image.cpp
